--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,49 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--game-viewport-width: 180px;
+	--game-viewport-height: 180px;
+	--game-cell-size: 16px;
+	--pixel-size: 1;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@layer components {
+	.canvas {
+		display: inline-block;
+		vertical-align: top;
+		image-rendering: -moz-crisp-edges;
+		image-rendering: -webkit-crisp-edges;
+		image-rendering: pixelated;
+		image-rendering: crisp-edges;
+	}
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (width >= 360px) {
+	:root {
+		--pixel-size: 2;
+	}
+}
+
+@media (width >= 540px) {
+	:root {
+		--pixel-size: 3;
+	}
+}
+
+@media (width >= 720px) {
+    :root {
+        --pixel-size: 4;
+    }
+}
+
+@media (width >= 900px) {
+    :root {
+        --pixel-size: 5;
+    }
+}
+
+@media (width >= 1080px) {
+    :root {
+        --pixel-size: 6;
+    }
 }
