--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,11 @@
 	--pixel-size: 1;
 }
 
+html,
+body {
+	overflow: hidden;
+}
+
 @layer components {
 	.canvas {
 		display: inline-block;
@@ -33,19 +38,19 @@
 }
 
 @media (width >= 720px) {
-    :root {
-        --pixel-size: 4;
-    }
+	:root {
+		--pixel-size: 4;
+	}
 }
 
 @media (width >= 900px) {
-    :root {
-        --pixel-size: 5;
-    }
+	:root {
+		--pixel-size: 5;
+	}
 }
 
 @media (width >= 1080px) {
-    :root {
-        --pixel-size: 6;
-    }
+	:root {
+		--pixel-size: 6;
+	}
 }
