Added Pizzas to battle scene

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,11 @@ body {
 	.combatant-plate {
 		background: url(/images/ui/combatant-plate.png) no-repeat no-repeat;
 	}
+
+	.pizza-shadow {
+		background: url(/images/characters/pizzas/pizza-shadow.png) no-repeat
+			no-repeat;
+	}
 }
 
 @media screen and (min-width: 360px) and (min-height: 360px) {
